--- a/Web/Shop Franchisee/css/style.css
+++ b/Web/Shop Franchisee/css/style.css
@@ -105,6 +105,7 @@ input[type=file] {
     position: fixed;
     width: 100%;
     height:50px;
+    display: flex;
 }
 
 .background-image {
@@ -136,17 +137,38 @@ input[type=file] {
     color: rgb(38, 126, 184);
     padding: 15px 15px;
     line-height: 20px;
+    width: 364px;
 }
-/*.lang {
+
+.footer
+.langs {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    order: 2;
+
+}
+.footer
+.text {
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+
+}
+
+
+.lang {
     padding: 10px 10px;
     line-height: 20px;
 }
+
 .language:hover,
 .language:active,
 .language:focus, 
 .language {
     color: #9d9d9d;
 }
+
 .button-lang:hover,
 .button-lang:active,
 .button-lang:focus,
@@ -155,7 +177,8 @@ input[type=file] {
     background-color: #222;
     outline: none;
     width: 38px;
-}*/
+}
+
 .search{
     display: inline-block;
     background-color: white;
